libdir=${peyotedir}

nobase_dist_peyote_PYTHON = fs/*.py  thread_system/*.py nc_panel/*.py lyrics/*.py *.py
#lib_LTLIBRARIES = libpygsthack.la
#libpygsthack_la_SOURCES=pygsthack.c
#libpygsthack_la_LDFLAFS= -module `pkg-config gstreamer-0.10 pygobject-2.0`
#libpygsthack_la_CFLAGS=`pkg-config gstreamer-0.10 pygobject-2.0 --cflags` $(PYTHON_CFLAGS) $(PYTHON_INCLUDES)
#pygstHhack_la_CFLAGS=`pkg-config gstreamer-0.10 pygobject-2.0 python-2.7 --cflags` 
#pygstHhack_la_LDLAGS=-shared `pkg-config gstreamer-0.10 pygobject-2.0 python-2.7 --libs`
#install-data-hook:
#	chmod a+x ${peyotedir}/peyote.py
